# cuBQL

./: CMakeLists.txt  README.md
cuBQL/: CMakeLists.txt  CUDAArray.h  bvh.h  common.h  computeSAH.h  fcp.h  math.h
cuBQL/builder/: cuda.h  host.h
cuBQL/builder/cuda/: builder_common.h  elh_builder.h  gpu_builder.h  morton.h  radix.h  sah_builder.h  wide_gpu_builder.h
cuBQL/builder/host/: spatialMedian.h
cuBQL/common/: box.h  common.h  math.h  vec.h
cuBQL/impl/: DevMem.h  builder_common.h  elh_builder.h  gpu_builder.h  instantiate_builders.cpp  instantiate_builders.cu  morton.h  rebinMortonBuilder.h  sah_builder.h  sm_builder.h  wide_gpu_builder.h
cuBQL/lineSegs/: LineSegs3f.h
cuBQL/math/: affine.h  box.h  common.h  conservativeDistances.h  linear.h  math.h  quaternion.h  random.h  vec.h
cuBQL/points/: fcp.h
cuBQL/queries/: fcp.h  fixedBoxQuery.h  knn.h  shrinkingRadiusQuery.h
cuBQL/queries/points/: findClosest.h  old_fcp.h
cuBQL/queries/triangles/: Triangle.h
cuBQL/traversal/: shrinkingRadiusQuery.h
cuBQL/triangles/: fcp.h
samples/: CMakeLists.txt  fcpTriangles.cu  lineSegs3f.cu
samples/common/: CMakeLists.txt  Generator.cpp  Generator.h  IO.h  generatePoints.cpp
samples/points/: CMakeLists.txt  closestPoint.cpp  closestPoint.cu  closestPoint.h
samples/s01_closestPoint_points_gpu/: CMakeLists.txt  closestPoint.cu
testing/: CMakeLists.txt  buildPerf.cu  buildPerf_points.cu  convert_br.cu  fcp-gen.cu  fcp-old.cu  fcp.cu  fcpAndKnn.cu  helper.h  makeBoxes_fromPoints.cu  makeBoxes_fromTris.cu  makePoints_clustered.cu  makePoints_sampleOBJ.cu  makePoints_uniform.cu  makeTable.py  makeTestScript.py  makeTris_fromOBJ.cu  twoLevel.cu
testing/bvh/: CMakeLists.txt  buildBench.cu  buildBench.h  buildQual.h  checkBuilders.cu
testing/common/: generatePoints.cpp  testRig_cuda.h  testRig_host.h
testing/helper/: CUDAArray.h  Generator.cu  Generator.h  plotBoxes.cu  plotPoints.cu  testGenerators.cu  triangles.cu  triangles.h
testing/old/: fcpAndKnn.cu  helper.h
testing/old/helper/: CUDAArray.h  instantiate_builders.cu  plotBoxes.cu  triangles.cu  triangles.h
testing/old/unit-tests/: CMakeLists.txt  instantiate-binaryBVH-builders.cu
testing/points/: CMakeLists.txt  closestPoint.cpp  closestPoint.cu  closestPoint.h  knn5.cpp  knn5.cu  knn5.h
testing/unit-tests/: instantiate-box_t.cu  instantiate-bvh_t.cu  instantiate-vec_t.cu
